[metadata]
description_file = README.md
url = https://github.com/jgrss/satsmooth
license = LICENSE.txt
version = attr: satsmooth.__version__
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Cython
    Programming Language :: Python :: 3.8 :: 3.9 :: 3.10

[options]
package_dir=
    =src
packages=find:
include_package_data = True
setup_requires =
    cython>=0.29.0,<3.0.0
python_requires = >=3.8,<3.11
install_requires =
    cython>=0.29.0,<3.0.0
    numpy>=1.19.0
    scikit-image
    numba

[options.packages.find]
where=src
exclude=
    data

[options.package_data]
* = *.md, *.txt
satsmooth = detect/*.so
    smooth/*.so
    preprocessing/*.so
    testing/*.so
    utils/*.pxd
